Fixed display of active organise if picture doesn't fit height

--- a/pixax/scss/pixax.scss
+++ b/pixax/scss/pixax.scss
@@ -185,8 +185,9 @@ html, body {
         }
     }
     img{
-        max-height:100%;
+        height:100%;
         max-width: 100%;
+        object-fit:contain;
     }
 }
 
